# cpp-units

./: CMakeLists.txt  LICENSE  README.md
cpp-units/: constexpr_map.hpp  constexpr_string.hpp  cpp-units.hpp  dimension.hpp  unit.hpp  utils.hpp
cpp-units/units/: length.hpp
cpp-units/utils/: constexpr_string.hpp  meta_map.hpp  utils.hpp
test/: CMakeLists.txt  dimension.cpp  main.cpp  unit.cpp  utils.cpp  utils.h
